<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    tools:context="csci3308.team44.localeventtracker.LoginActivity">

    <ImageView
        android:id="@+id/formBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0px"
        android:baselineAligned="false"
        android:scaleType="centerCrop"
        android:src="@drawable/background2" />

    <!-- Login progress -->
    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/formLogo"
        >


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/transparent_white_rec"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Get Started"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Sign in or register with NiteOut"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"


                />


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_white"

                android:drawableLeft="@drawable/ic_user24dp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"

                />

<!--            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"

                />
-->
            <EditText
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_zip_code"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"

                />


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/action_sign_in"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:background="@drawable/reg_button"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
